# continuum

./: .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTINUUM-IN-TAX-PILOT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  docker-compose.yml  litellm_config.yaml  pyproject.toml  requirements.txt  temporal
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/data/: pending-insights.jsonl
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude/skills/continuum-agent/: SKILL.md
.claude/skills/continuum-claude-code/: SKILL.md
.claude/skills/continuum-codex/: SKILL.md
.claude/skills/continuum-cursor/: SKILL.md
.claude/skills/continuum-evaluation/: SKILL.md
.claude/skills/continuum-handoffs/: SKILL.md
.claude/skills/continuum-llm-providers/: SKILL.md
.claude/skills/continuum-memory/: SKILL.md
.claude/skills/continuum-observability/: SKILL.md
.claude/skills/continuum-quickstart/: SKILL.md
.claude/skills/continuum-recipes/: SKILL.md
.cursor/rules/: continuum.mdc
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  question.yml
.github/workflows/: ci.yml  release-please.yml  release.yml  security.yml
docs/: GUIDE.md  HACKATHON.md  README.md  agent.md  core.md  features.md  index.html  installation.md  llm.md  memory.md  observability.md  open-source-plan.md  session.md  tools.md  versioning.md
docs/framer/: ContinuumDocs.tsx  README.md  build_framer.py
docs/temporal/: custom-agents.md  custom-workflows.md  docker.md  getting-started.md  human-in-loop.md  workflow-patterns.md
docs/update-docs/: memory-issue-analysis.md  update-tool-attention-2026-05-05.md  update_orla_2026-05-01.md  update_overview.md
frontend/assortment/: README.md  package-lock.json  package.json
frontend/commerce-chat/: README.md
playground/: __init__.py  continuum_e2e.py  temporal_e2e_test.py
playground/assortment/: __init__.py  api.py
playground/commerce-chat/: README.md  __init__.py  agent.py  api.py  cli.py  config.py  multi_agent.py  requirements.txt  schemas.py
playground/decision-trace-glassbox/: agents.py  config.py  server.py  web.py
playground/fetch-agent/: agent.py  cli.py  config.py
playground/gateway-local-shop/: agent.py  cli.py  config.py  context_test.py  e2e_test.py  server.py  server_sse.py  server_stdio.py  test.py  verify_transports.py  web.py
playground/gateway-multi-agent-shop/: agents.py  cli.py  config.py  server.py  web.py  workflows.py
playground/local-shop/: agent.py  config.py  server.py  web.py
playground/memory-modes-demo/: README.md  __init__.py  agent.py  cli.py  config.py
playground/multi-agent-shop/: agents.py  cli.py  config.py  server.py  web.py  workflows.py
playground/no-mcp-demo/: agents.py  config.py  stream_test.py  web.py  workflows.py
playground/orla-based/: __main__.py  agents.py  cli.py  config.py  pipeline.py  stress.py  test_cases.txt  tools.py
playground/sdk_feature_test/: README.md  __init__.py  __main__.py  cli.py  config.py  mcp_fake.py  pipeline.py  schemas.py
playground/smart-layer-e2e/: .env.example  README.md  app.py  benchmark.py  requirements.txt  stats_store.py
playground/temporal-leadflow/: config.py  schemas.py  web.py
research/: 01-continuum-deep-dive.md  02-framework-landscape.md  03-continuum-vs-competitors.md
research/issues/: 00-executive-summary.md  01-agent-layer-issues.md  02-llm-memory-session-issues.md  03-tools-observability-infra-issues.md  04-temporal-evaluation-issues.md
scripts/: bench_memory_write_mode.py  health_check.py
src/continuum/: __init__.py  cli.py  config.py  exceptions.py  logging.py  protocols.py
src/orchestrator/: __init__.py  config.py  exceptions.py  logging.py
tests/: __init__.py  conftest.py  test_agent.py  test_context_management.py  test_langfuse.py  test_llm.py  test_memory.py  test_memory_refactored.py  test_session.py  test_tools.py
tests/e2e/: __init__.py  conftest.py  test_agent_edge_cases.py  test_agent_handoffs.py  test_agent_run.py  test_agent_tools.py  test_decision_trace.py  test_decision_trace_fork.py  test_decision_trace_multi_agent.py  test_decision_trace_phase56.py  test_decision_trace_streaming.py  test_decision_trace_workflow.py  test_evaluation_advanced.py  test_memory_modes.py
tests/integration/: __init__.py  conftest.py  mcp_fake_server.py  test_cli_compose.py  test_context_management.py  test_langfuse.py  test_llm_client.py  test_llm_providers.py  test_memory_background_write.py  test_memory_leak.py  test_memory_operations.py  test_memory_scenarios.py  test_memory_stress.py  test_memory_system.py  test_milvus_memory.py  test_qdrant_memory.py  test_redis_session.py  test_session_adversarial.py  test_session_memory.py  test_session_redis.py  test_tools_mcp.py  test_trace_store_redis.py
tests/test_llm/: __init__.py  conftest.py  test_client.py
tests/unit/: __init__.py  conftest.py  test_agent_creation.py  test_agent_runner_save_turn.py  test_agent_types.py  test_agent_workflow.py  test_background_task_registry.py  test_circuit_breaker.py  test_cli.py  test_config.py  test_encapsulation.py  test_exceptions.py  test_exceptions_session.py  test_handoff_context.py  test_handoff_types.py  test_issue01_agent_layer.py  test_issue02_llm_session.py  test_issue03_tools_infra.py  test_issue04_temporal_eval.py  test_llm_client_json.py  test_local_shop_resources.py  test_logging.py  test_max_turns_partial_response.py  test_mcp_client_integration.py  test_memory_refactored.py  test_memory_service_scoping.py  test_message_builder_refactor.py  test_observability_decoupling.py  test_prepare_run.py  test_protocols.py  test_rate_limiter.py  test_run_context_new_fields.py  test_run_finalizer.py  test_run_finalizer_refactor.py  test_run_lifecycle.py  test_runner_finalize.py  test_runner_messages.py  test_sanitization.py  test_secrets_util.py  test_security_policy.py  (+8 more)
(+485 files in other folders)
