[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shyftlabs-continuum"
version = "0.2.0"
description = "Agentic Framework for Enterprise-Wide Execution with multi-LLM provider support, observability, and error tracking"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Proprietary"}
authors = [
    {name = "Bhavik Ardeshna", email = "bhavik@shyftlabs.io"}
]
keywords = [
    "ai",
    "llm",
    "orchestration",
    "agents",
    "langfuse",
    "memory",
    "session",
    "mcp"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiohttp>=3.13.2",  # Explicit dependency - latest version fixes enable_cleanup_closed deprecation warning for Python 3.13+
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "tiktoken>=0.7.0",
    "langfuse>=2.57.0,<3.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "mem0ai>=1.0.0",
    "qdrant-client>=1.16.0",
    "redis>=5.0.0",
    "mcp>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.5.0",
    "fakeredis>=2.21.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
]
cohere = [
    "cohere>=5.0.0",
]
temporal = [
    "temporalio>=1.23.0",
]
eval = [
    "deepeval>=1.0.0",
    "ragas>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/bhavik-shyftlabs/shyftlabs-continuum"
Documentation = "https://github.com/bhavik-shyftlabs/shyftlabs-continuum/docs"
Repository = "https://github.com/bhavik-shyftlabs/shyftlabs-continuum"
Issues = "https://github.com/bhavik-shyftlabs/shyftlabs-continuum/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["orchestrator*"]
exclude = ["tests*", "playground*"]

[tool.setuptools.package-data]
"orchestrator" = ["py.typed"]
"*" = []

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["orchestrator"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require running services)",
    "e2e: End-to-end tests (require all services)",
    "slow: Tests that take more than 5 seconds",
    "live_mcp: Integration tests that require a live MCP server (set MCP_SERVER_URL)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/orchestrator"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/playground/*",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "pass",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"
